--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
     />
+  
   </head>
 
   <body>
@@ -21,7 +22,7 @@
         <i class="bx bx-x" id="close"></i>
       </label>
 
-      <nav class="navbar">
+      <nav class="navbar" id="">
         <a href="#" style="--i: 0">Home</a>
         <a href="#" style="--i: 1">About us</a>
         <a href="#" style="--i: 2">Gallery</a>
@@ -33,7 +34,44 @@
     <section class="sec1">
  
     </section>
-    <section class="sec2"></section>
-    <section class="sec3"></section>
+    <section class="sec2" id="selector">
+      <div class="code1"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae fugit deleniti id debitis consequuntur. Perspiciatis iste quaerat fugiat maxime impedit nam ratione quis exercitationem perferendis, explicabo, odit eveniet amet ab? Dignissimos asperiores earum maxime quisquam voluptatem accusantium vitae porro, atque doloremque incidunt placeat repellat fugiat quod veniam tempore dicta officia eveniet, vel totam accusamus voluptas provident quia et? Fugit voluptatum doloribus veritatis, similique rem quisquam consectetur unde nemo quas velit harum ex magnam eaque fugiat veniam!</p></div>
+      <div class="code1"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae fugit deleniti id debitis consequuntur. Perspiciatis iste quaerat fugiat maxime impedit nam ratione quis exercitationem perferendis, explicabo, odit eveniet amet ab? Dignissimos asperiores earum maxime quisquam voluptatem accusantium vitae porro, atque doloremque incidunt placeat repellat fugiat quod veniam tempore dicta officia eveniet, vel totam accusamus voluptas provident quia et? Fugit voluptatum doloribus veritatis, similique rem quisquam consectetur unde nemo quas velit harum ex magnam eaque fugiat veniam!</p></div>
+      <div class="code1"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae fugit deleniti id debitis consequuntur. Perspiciatis iste quaerat fugiat maxime impedit nam ratione quis exercitationem perferendis, explicabo, odit eveniet amet ab? Dignissimos asperiores earum maxime quisquam voluptatem accusantium vitae porro, atque doloremque incidunt placeat repellat fugiat quod veniam tempore dicta officia eveniet, vel totam accusamus voluptas provident quia et? Fugit voluptatum doloribus veritatis, similique rem quisquam consectetur unde nemo quas velit harum ex magnam eaque fugiat veniam!</p></div>
+      <div class="code1"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae fugit deleniti id debitis consequuntur. Perspiciatis iste quaerat fugiat maxime impedit nam ratione quis exercitationem perferendis, explicabo, odit eveniet amet ab? Dignissimos asperiores earum maxime quisquam voluptatem accusantium vitae porro, atque doloremque incidunt placeat repellat fugiat quod veniam tempore dicta officia eveniet, vel totam accusamus voluptas provident quia et? Fugit voluptatum doloribus veritatis, similique rem quisquam consectetur unde nemo quas velit harum ex magnam eaque fugiat veniam!</p></div>
+      <div class="code1"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae fugit deleniti id debitis consequuntur. Perspiciatis iste quaerat fugiat maxime impedit nam ratione quis exercitationem perferendis, explicabo, odit eveniet amet ab? Dignissimos asperiores earum maxime quisquam voluptatem accusantium vitae porro, atque doloremque incidunt placeat repellat fugiat quod veniam tempore dicta officia eveniet, vel totam accusamus voluptas provident quia et? Fugit voluptatum doloribus veritatis, similique rem quisquam consectetur unde nemo quas velit harum ex magnam eaque fugiat veniam!</p></div>
+      <div class="code1"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae fugit deleniti id debitis consequuntur. Perspiciatis iste quaerat fugiat maxime impedit nam ratione quis exercitationem perferendis, explicabo, odit eveniet amet ab? Dignissimos asperiores earum maxime quisquam voluptatem accusantium vitae porro, atque doloremque incidunt placeat repellat fugiat quod veniam tempore dicta officia eveniet, vel totam accusamus voluptas provident quia et? Fugit voluptatum doloribus veritatis, similique rem quisquam consectetur unde nemo quas velit harum ex magnam eaque fugiat veniam!</p></div>
+    </section>
+    <section class="sec3">
+      <div id="top">
+        <h1 id="top_head">DARSHAN</h1>
+      </div>
+      <div id="center"></div>
+      <div id="bottom">
+        <h1 id="bottom_head">DARSHAN</h1>
+      </div>
+    </section>
+
+    <section class="sec4">
+      <div id="cssportal-grid">
+        <div id="card">div1</div>
+        <div id="card">div2</div>
+        <div id="card">div3</div>
+        <div id="card">div4</div>
+        <div id="card">div5</div>
+        <div id="card">div6</div>
+        <div id="card">div7</div>
+        <div id="card">div8</div>
+        <div id="card">div9</div>
+        <div id="card">div10</div>
+        <div id="card">div11</div>
+        <div id="card">div12</div>
+  
+      </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
